# janeiro

./: .gitignore  Makefile  README.md  app.py  db.sqlite  main.py  mkdocs.yml  models.py  pyproject.toml
.github/workflows/: release.yml
0.0.3/: 404.html
0.0.3/configuration/: index.html
0.0.3/logging/: index.html
0.0.3/search/: search_index.json
db_migrations/: alembic.ini  env.py
db_migrations/versions/: 2043fc3f989c_add_group_table.py  d877f22492ea_initial_revision.py
docs/: configuration.md  logging.md
janeiro/: __init__.py  config.py  context.py  database.py  lazy.py  logging.py  query.py  rest.py
janeiro/cli/: __init__.py  database.py  rest.py
tests/: test_config.py  test_database.py  test_logging.py
